# Directory-choice

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cpp_project.yml
include/: DirChoiceDialog.h  ExtensionSearcher.h  MyApp.h
src/: DirChoiceDialog.cpp  ExtensionSearcher.cpp  MyApp.cpp  main.cpp
